--- a/trunk/oma2/oma2/Preferences.xib
+++ b/trunk/oma2/oma2/Preferences.xib
@@ -60,7 +60,6 @@
 							<int key="NSvFlags">12</int>
 							<string key="NSFrame">{{56, -10}, {697, 526}}</string>
 							<reference key="NSSuperview" ref="1006"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="405010109"/>
 							<string key="NSReuseIdentifierKey">_NS:608</string>
 							<object class="NSMutableArray" key="NSTabViewItems">
@@ -138,7 +137,6 @@
 												<int key="NSvFlags">268</int>
 												<string key="NSFrame">{{274, 451}, {54, 17}}</string>
 												<reference key="NSSuperview" ref="405010109"/>
-												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="936561961"/>
 												<string key="NSReuseIdentifierKey">_NS:3944</string>
 												<bool key="NSEnabled">YES</bool>
@@ -170,7 +168,6 @@
 												<int key="NSvFlags">268</int>
 												<string key="NSFrame">{{547, 451}, {54, 17}}</string>
 												<reference key="NSSuperview" ref="405010109"/>
-												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="971644841"/>
 												<string key="NSReuseIdentifierKey">_NS:3944</string>
 												<bool key="NSEnabled">YES</bool>
@@ -190,7 +187,6 @@
 												<int key="NSvFlags">268</int>
 												<string key="NSFrame">{{14, 425}, {102, 17}}</string>
 												<reference key="NSSuperview" ref="405010109"/>
-												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="71578599"/>
 												<string key="NSReuseIdentifierKey">_NS:3944</string>
 												<bool key="NSEnabled">YES</bool>
@@ -210,7 +206,6 @@
 												<int key="NSvFlags">268</int>
 												<string key="NSFrame">{{19, 393}, {96, 17}}</string>
 												<reference key="NSSuperview" ref="405010109"/>
-												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="659288098"/>
 												<string key="NSReuseIdentifierKey">_NS:3944</string>
 												<bool key="NSEnabled">YES</bool>
@@ -230,7 +225,6 @@
 												<int key="NSvFlags">268</int>
 												<string key="NSFrame">{{37, 361}, {79, 17}}</string>
 												<reference key="NSSuperview" ref="405010109"/>
-												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="38821514"/>
 												<string key="NSReuseIdentifierKey">_NS:3944</string>
 												<bool key="NSEnabled">YES</bool>
@@ -250,7 +244,6 @@
 												<int key="NSvFlags">268</int>
 												<string key="NSFrame">{{30, 329}, {85, 17}}</string>
 												<reference key="NSSuperview" ref="405010109"/>
-												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="629531668"/>
 												<string key="NSReuseIdentifierKey">_NS:3944</string>
 												<bool key="NSEnabled">YES</bool>
@@ -270,7 +263,6 @@
 												<int key="NSvFlags">268</int>
 												<string key="NSFrame">{{121, 422}, {361, 22}}</string>
 												<reference key="NSSuperview" ref="405010109"/>
-												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="945192704"/>
 												<string key="NSReuseIdentifierKey">_NS:903</string>
 												<bool key="NSEnabled">YES</bool>
@@ -304,7 +296,6 @@
 												<int key="NSvFlags">268</int>
 												<string key="NSFrame">{{121, 390}, {361, 22}}</string>
 												<reference key="NSSuperview" ref="405010109"/>
-												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="205447636"/>
 												<string key="NSReuseIdentifierKey">_NS:903</string>
 												<bool key="NSEnabled">YES</bool>
@@ -325,7 +316,6 @@
 												<int key="NSvFlags">268</int>
 												<string key="NSFrame">{{121, 358}, {361, 22}}</string>
 												<reference key="NSSuperview" ref="405010109"/>
-												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="1028100363"/>
 												<string key="NSReuseIdentifierKey">_NS:903</string>
 												<bool key="NSEnabled">YES</bool>
@@ -346,7 +336,6 @@
 												<int key="NSvFlags">268</int>
 												<string key="NSFrame">{{121, 326}, {361, 22}}</string>
 												<reference key="NSSuperview" ref="405010109"/>
-												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="646888755"/>
 												<string key="NSReuseIdentifierKey">_NS:903</string>
 												<bool key="NSEnabled">YES</bool>
@@ -367,7 +356,6 @@
 												<int key="NSvFlags">268</int>
 												<string key="NSFrame">{{542, 422}, {62, 22}}</string>
 												<reference key="NSSuperview" ref="405010109"/>
-												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="551836010"/>
 												<string key="NSReuseIdentifierKey">_NS:903</string>
 												<bool key="NSEnabled">YES</bool>
@@ -388,7 +376,6 @@
 												<int key="NSvFlags">268</int>
 												<string key="NSFrame">{{543, 390}, {62, 22}}</string>
 												<reference key="NSSuperview" ref="405010109"/>
-												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="256902137"/>
 												<string key="NSReuseIdentifierKey">_NS:903</string>
 												<bool key="NSEnabled">YES</bool>
@@ -409,7 +396,6 @@
 												<int key="NSvFlags">268</int>
 												<string key="NSFrame">{{542, 358}, {62, 22}}</string>
 												<reference key="NSSuperview" ref="405010109"/>
-												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="622657139"/>
 												<string key="NSReuseIdentifierKey">_NS:903</string>
 												<bool key="NSEnabled">YES</bool>
@@ -430,8 +416,7 @@
 												<int key="NSvFlags">268</int>
 												<string key="NSFrame">{{543, 326}, {62, 22}}</string>
 												<reference key="NSSuperview" ref="405010109"/>
-												<reference key="NSWindow"/>
-												<reference key="NSNextKeyView" ref="870145194"/>
+												<reference key="NSNextKeyView" ref="711536789"/>
 												<string key="NSReuseIdentifierKey">_NS:903</string>
 												<bool key="NSEnabled">YES</bool>
 												<object class="NSTextFieldCell" key="NSCell" id="396562242">
@@ -451,7 +436,6 @@
 												<int key="NSvFlags">268</int>
 												<string key="NSFrame">{{534, 9}, {59, 32}}</string>
 												<reference key="NSSuperview" ref="405010109"/>
-												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView"/>
 												<string key="NSReuseIdentifierKey">_NS:687</string>
 												<bool key="NSEnabled">YES</bool>
@@ -470,10 +454,29 @@
 													<int key="NSPeriodicInterval">25</int>
 												</object>
 											</object>
+											<object class="NSTextField" id="711536789">
+												<reference key="NSNextResponder" ref="405010109"/>
+												<int key="NSvFlags">268</int>
+												<string key="NSFrame">{{121, 220}, {96, 22}}</string>
+												<reference key="NSSuperview" ref="405010109"/>
+												<reference key="NSNextKeyView" ref="870145194"/>
+												<string key="NSReuseIdentifierKey">_NS:903</string>
+												<bool key="NSEnabled">YES</bool>
+												<object class="NSTextFieldCell" key="NSCell" id="37613272">
+													<int key="NSCellFlags">-1804468671</int>
+													<int key="NSCellFlags2">272630784</int>
+													<string key="NSContents"/>
+													<reference key="NSSupport" ref="256022502"/>
+													<string key="NSCellIdentifier">_NS:903</string>
+													<reference key="NSControlView" ref="711536789"/>
+													<bool key="NSDrawsBackground">YES</bool>
+													<reference key="NSBackgroundColor" ref="338513492"/>
+													<reference key="NSTextColor" ref="451479306"/>
+												</object>
+											</object>
 										</object>
 										<string key="NSFrame">{{10, 33}, {677, 480}}</string>
 										<reference key="NSSuperview" ref="650804698"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="214474569"/>
 									</object>
 									<string key="NSLabel">Prefixes</string>
@@ -494,10 +497,9 @@
 					</object>
 					<string key="NSFrameSize">{723, 542}</string>
 					<reference key="NSSuperview"/>
-					<reference key="NSWindow"/>
 					<reference key="NSNextKeyView" ref="650804698"/>
 				</object>
-				<string key="NSScreenRect">{{0, 0}, {1920, 1178}}</string>
+				<string key="NSScreenRect">{{0, 0}, {1280, 778}}</string>
 				<string key="NSMaxSize">{10000000000000, 10000000000000}</string>
 				<bool key="NSWindowIsRestorable">YES</bool>
 			</object>
@@ -821,6 +823,7 @@
 							<reference ref="646888755"/>
 							<reference ref="214474569"/>
 							<reference ref="870145194"/>
+							<reference ref="711536789"/>
 						</object>
 						<reference key="parent" ref="944446276"/>
 					</object>
@@ -1039,6 +1042,20 @@
 						<reference key="object" ref="461339295"/>
 						<reference key="parent" ref="870145194"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">69</int>
+						<reference key="object" ref="711536789"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="37613272"/>
+						</object>
+						<reference key="parent" ref="405010109"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">70</int>
+						<reference key="object" ref="37613272"/>
+						<reference key="parent" ref="711536789"/>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -1093,7 +1110,9 @@
 					<string>56.IBPluginDependency</string>
 					<string>57.IBPluginDependency</string>
 					<string>6.IBPluginDependency</string>
+					<string>69.IBPluginDependency</string>
 					<string>7.IBPluginDependency</string>
+					<string>70.IBPluginDependency</string>
 					<string>8.IBPluginDependency</string>
 					<string>9.IBPluginDependency</string>
 				</object>
@@ -1105,6 +1124,8 @@
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>{{357, 418}, {480, 270}}</string>
 					<integer value="1"/>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -1164,106 +1185,9 @@
 				<reference key="dict.values" ref="1002"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">68</int>
+			<int key="maxID">73</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<bool key="EncodedWithXMLCoder">YES</bool>
-				<object class="IBPartialClassDescription">
-					<string key="className">PreferenceController</string>
-					<string key="superclassName">NSWindowController</string>
-					<object class="NSMutableDictionary" key="actions">
-						<string key="NS.key.0">newSavePrefix:</string>
-						<string key="NS.object.0">id</string>
-					</object>
-					<object class="NSMutableDictionary" key="actionInfosByName">
-						<string key="NS.key.0">newSavePrefix:</string>
-						<object class="IBActionInfo" key="NS.object.0">
-							<string key="name">newSavePrefix:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</object>
-					<object class="NSMutableDictionary" key="outlets">
-						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSArray" key="dict.sortedKeys">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>getPrefix</string>
-							<string>getSuffix</string>
-							<string>macroPrefix</string>
-							<string>macroSuffix</string>
-							<string>savePrefix</string>
-							<string>saveSuffix</string>
-							<string>settingsPrefix</string>
-							<string>settingsSuffix</string>
-						</object>
-						<object class="NSMutableArray" key="dict.values">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>NSTextField</string>
-							<string>NSTextField</string>
-							<string>NSTextField</string>
-							<string>NSTextField</string>
-							<string>NSTextField</string>
-							<string>NSTextField</string>
-							<string>NSTextField</string>
-							<string>NSTextField</string>
-						</object>
-					</object>
-					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSArray" key="dict.sortedKeys">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>getPrefix</string>
-							<string>getSuffix</string>
-							<string>macroPrefix</string>
-							<string>macroSuffix</string>
-							<string>savePrefix</string>
-							<string>saveSuffix</string>
-							<string>settingsPrefix</string>
-							<string>settingsSuffix</string>
-						</object>
-						<object class="NSMutableArray" key="dict.values">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<object class="IBToOneOutletInfo">
-								<string key="name">getPrefix</string>
-								<string key="candidateClassName">NSTextField</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">getSuffix</string>
-								<string key="candidateClassName">NSTextField</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">macroPrefix</string>
-								<string key="candidateClassName">NSTextField</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">macroSuffix</string>
-								<string key="candidateClassName">NSTextField</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">savePrefix</string>
-								<string key="candidateClassName">NSTextField</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">saveSuffix</string>
-								<string key="candidateClassName">NSTextField</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">settingsPrefix</string>
-								<string key="candidateClassName">NSTextField</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">settingsSuffix</string>
-								<string key="candidateClassName">NSTextField</string>
-							</object>
-						</object>
-					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/PreferenceController.h</string>
-					</object>
-				</object>
-			</object>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDevelopmentDependencies">
