--- a/oma2/oma2/Status.xib
+++ b/oma2/oma2/Status.xib
@@ -63,7 +63,6 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{133, 193}, {48, 14}}</string>
 							<reference key="NSSuperview" ref="1006"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="78601372"/>
 							<string key="NSReuseIdentifierKey">_NS:3944</string>
 							<bool key="NSEnabled">YES</bool>
@@ -113,7 +112,6 @@
 											<int key="NSvFlags">268</int>
 											<string key="NSFrame">{{11, 5}, {210, 18}}</string>
 											<reference key="NSSuperview" ref="123839031"/>
-											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="240803401"/>
 											<string key="NSReuseIdentifierKey">_NS:779</string>
 											<bool key="NSEnabled">YES</bool>
@@ -136,14 +134,12 @@
 									</object>
 									<string key="NSFrame">{{1, 1}, {229, 29}}</string>
 									<reference key="NSSuperview" ref="860410324"/>
-									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="451424973"/>
 									<string key="NSReuseIdentifierKey">_NS:21</string>
 								</object>
 							</object>
 							<string key="NSFrame">{{8, 162}, {231, 47}}</string>
 							<reference key="NSSuperview" ref="1006"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="123839031"/>
 							<string key="NSReuseIdentifierKey">_NS:18</string>
 							<string key="NSOffsets">{0, 0}</string>
@@ -187,14 +183,13 @@
 											<int key="NSvFlags">268</int>
 											<string key="NSFrame">{{15, 26}, {78, 17}}</string>
 											<reference key="NSSuperview" ref="144877523"/>
-											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="669491963"/>
 											<string key="NSReuseIdentifierKey">_NS:3944</string>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSTextFieldCell" key="NSCell" id="132051301">
 												<int key="NSCellFlags">68288064</int>
 												<int key="NSCellFlags2">272630784</int>
-												<string key="NSContents">0</string>
+												<string key="NSContents">cmin</string>
 												<object class="NSFont" key="NSSupport" id="44460377">
 													<string key="NSName">LucidaGrande</string>
 													<double key="NSSize">13</double>
@@ -211,7 +206,6 @@
 											<int key="NSvFlags">268</int>
 											<string key="NSFrame">{{53, 6}, {38, 16}}</string>
 											<reference key="NSSuperview" ref="144877523"/>
-											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="557591714"/>
 											<string key="NSReuseIdentifierKey">_NS:687</string>
 											<bool key="NSEnabled">YES</bool>
@@ -239,7 +233,6 @@
 											<int key="NSvFlags">268</int>
 											<string key="NSFrame">{{7, 6}, {38, 16}}</string>
 											<reference key="NSSuperview" ref="144877523"/>
-											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="705411830"/>
 											<string key="NSReuseIdentifierKey">_NS:687</string>
 											<bool key="NSEnabled">YES</bool>
@@ -261,14 +254,12 @@
 									</object>
 									<string key="NSFrame">{{1, 1}, {98, 49}}</string>
 									<reference key="NSSuperview" ref="518615036"/>
-									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="491098109"/>
 									<string key="NSReuseIdentifierKey">_NS:21</string>
 								</object>
 							</object>
 							<string key="NSFrame">{{17, 236}, {100, 65}}</string>
 							<reference key="NSSuperview" ref="1006"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="144877523"/>
 							<string key="NSReuseIdentifierKey">_NS:18</string>
 							<string key="NSOffsets">{0, 0}</string>
@@ -294,7 +285,6 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{36, 219}, {61, 18}}</string>
 							<reference key="NSSuperview" ref="1006"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="304024165"/>
 							<string key="NSReuseIdentifierKey">_NS:771</string>
 							<bool key="NSEnabled">YES</bool>
@@ -335,14 +325,13 @@
 											<int key="NSvFlags">268</int>
 											<string key="NSFrame">{{15, 26}, {78, 17}}</string>
 											<reference key="NSSuperview" ref="440458232"/>
-											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="294684194"/>
 											<string key="NSReuseIdentifierKey">_NS:3944</string>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSTextFieldCell" key="NSCell" id="433210271">
 												<int key="NSCellFlags">68288064</int>
 												<int key="NSCellFlags2">272630784</int>
-												<string key="NSContents">0</string>
+												<string key="NSContents">cmax</string>
 												<reference key="NSSupport" ref="44460377"/>
 												<string key="NSCellIdentifier">_NS:3944</string>
 												<reference key="NSControlView" ref="284205641"/>
@@ -355,7 +344,6 @@
 											<int key="NSvFlags">268</int>
 											<string key="NSFrame">{{53, 6}, {38, 16}}</string>
 											<reference key="NSSuperview" ref="440458232"/>
-											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="48275281"/>
 											<string key="NSReuseIdentifierKey">_NS:687</string>
 											<bool key="NSEnabled">YES</bool>
@@ -379,7 +367,6 @@
 											<int key="NSvFlags">268</int>
 											<string key="NSFrame">{{7, 6}, {38, 16}}</string>
 											<reference key="NSSuperview" ref="440458232"/>
-											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="308026372"/>
 											<string key="NSReuseIdentifierKey">_NS:687</string>
 											<bool key="NSEnabled">YES</bool>
@@ -401,14 +388,12 @@
 									</object>
 									<string key="NSFrame">{{1, 1}, {98, 49}}</string>
 									<reference key="NSSuperview" ref="304024165"/>
-									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="284205641"/>
 									<string key="NSReuseIdentifierKey">_NS:21</string>
 								</object>
 							</object>
 							<string key="NSFrame">{{129, 236}, {100, 65}}</string>
 							<reference key="NSSuperview" ref="1006"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="440458232"/>
 							<string key="NSReuseIdentifierKey">_NS:18</string>
 							<string key="NSOffsets">{0, 0}</string>
@@ -434,7 +419,6 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{148, 219}, {61, 18}}</string>
 							<reference key="NSSuperview" ref="1006"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="860410324"/>
 							<string key="NSReuseIdentifierKey">_NS:771</string>
 							<bool key="NSEnabled">YES</bool>
@@ -460,7 +444,6 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{8, 108}, {231, 45}}</string>
 							<reference key="NSSuperview" ref="1006"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView"/>
 							<string key="NSReuseIdentifierKey">_NS:797</string>
 							<bool key="NSEnabled">YES</bool>
@@ -606,10 +589,9 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 					</object>
 					<string key="NSFrameSize">{246, 301}</string>
 					<reference key="NSSuperview"/>
-					<reference key="NSWindow"/>
 					<reference key="NSNextKeyView" ref="518615036"/>
 				</object>
-				<string key="NSScreenRect">{{0, 0}, {1920, 1178}}</string>
+				<string key="NSScreenRect">{{0, 0}, {1440, 878}}</string>
 				<string key="NSMaxSize">{10000000000000, 10000000000000}</string>
 				<bool key="NSWindowIsRestorable">YES</bool>
 			</object>
@@ -630,6 +612,22 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 						<reference key="destination" ref="1005"/>
 					</object>
 					<int key="connectionID">238</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">ColorMaxLabel</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="284205641"/>
+					</object>
+					<int key="connectionID">302</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">ColorMinLabel</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="491098109"/>
+					</object>
+					<int key="connectionID">303</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBBindingConnection" key="connection">
@@ -657,19 +655,23 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBBindingConnection" key="connection">
-						<string key="label">value: MinMaxIncLabel</string>
-						<reference key="source" ref="13148152"/>
+						<string key="label">value: autoScale</string>
+						<reference key="source" ref="48275281"/>
 						<reference key="destination" ref="594875767"/>
 						<object class="NSNibBindingConnector" key="connector">
-							<reference key="NSSource" ref="13148152"/>
+							<reference key="NSSource" ref="48275281"/>
 							<reference key="NSDestination" ref="594875767"/>
-							<string key="NSLabel">value: MinMaxIncLabel</string>
+							<string key="NSLabel">value: autoScale</string>
 							<string key="NSBinding">value</string>
-							<string key="NSKeyPath">MinMaxIncLabel</string>
+							<string key="NSKeyPath">autoScale</string>
+							<object class="NSDictionary" key="NSOptions">
+								<string key="NS.key.0">NSValidatesImmediately</string>
+								<boolean value="YES" key="NS.object.0"/>
+							</object>
 							<int key="NSNibBindingConnectorVersion">2</int>
 						</object>
 					</object>
-					<int key="connectionID">278</int>
+					<int key="connectionID">306</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBBindingConnection" key="connection">
@@ -689,30 +691,6 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBActionConnection" key="connection">
-						<string key="label">UpdateMinMaxInc:</string>
-						<reference key="source" ref="594875767"/>
-						<reference key="destination" ref="451424973"/>
-					</object>
-					<int key="connectionID">240</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
-						<string key="label">ColorMinLabel</string>
-						<reference key="source" ref="594875767"/>
-						<reference key="destination" ref="491098109"/>
-					</object>
-					<int key="connectionID">244</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
-						<string key="label">ColorMaxLabel</string>
-						<reference key="source" ref="594875767"/>
-						<reference key="destination" ref="284205641"/>
-					</object>
-					<int key="connectionID">245</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBActionConnection" key="connection">
 						<string key="label">selectTool:</string>
 						<reference key="source" ref="594875767"/>
 						<reference key="destination" ref="78601372"/>
@@ -726,6 +704,30 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 						<reference key="destination" ref="78601372"/>
 					</object>
 					<int key="connectionID">275</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">ColorMaxLabel</string>
+						<reference key="source" ref="594875767"/>
+						<reference key="destination" ref="284205641"/>
+					</object>
+					<int key="connectionID">301</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">ColorMinLabel</string>
+						<reference key="source" ref="594875767"/>
+						<reference key="destination" ref="491098109"/>
+					</object>
+					<int key="connectionID">304</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">scaleCheckbox:</string>
+						<reference key="source" ref="594875767"/>
+						<reference key="destination" ref="48275281"/>
+					</object>
+					<int key="connectionID">307</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -1107,134 +1109,9 @@ AAMAAAABAAEAAAFTAAMAAAAEAAAFwgAAAAAACAAIAAgACAABAAEAAQABA</bytes>
 				<reference key="dict.values" ref="1002"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">281</int>
+			<int key="maxID">307</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<bool key="EncodedWithXMLCoder">YES</bool>
-				<object class="IBPartialClassDescription">
-					<string key="className">StatusController</string>
-					<string key="superclassName">NSWindowController</string>
-					<object class="NSMutableDictionary" key="actions">
-						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSArray" key="dict.sortedKeys">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>UpdateMinMaxInc:</string>
-							<string>decreaseColorMax:</string>
-							<string>decreaseColorMin:</string>
-							<string>increaseColorMax:</string>
-							<string>increaseColorMin:</string>
-							<string>selectTool:</string>
-						</object>
-						<object class="NSMutableArray" key="dict.values">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>id</string>
-							<string>id</string>
-							<string>id</string>
-							<string>id</string>
-							<string>id</string>
-							<string>id</string>
-						</object>
-					</object>
-					<object class="NSMutableDictionary" key="actionInfosByName">
-						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSArray" key="dict.sortedKeys">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>UpdateMinMaxInc:</string>
-							<string>decreaseColorMax:</string>
-							<string>decreaseColorMin:</string>
-							<string>increaseColorMax:</string>
-							<string>increaseColorMin:</string>
-							<string>selectTool:</string>
-						</object>
-						<object class="NSMutableArray" key="dict.values">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<object class="IBActionInfo">
-								<string key="name">UpdateMinMaxInc:</string>
-								<string key="candidateClassName">id</string>
-							</object>
-							<object class="IBActionInfo">
-								<string key="name">decreaseColorMax:</string>
-								<string key="candidateClassName">id</string>
-							</object>
-							<object class="IBActionInfo">
-								<string key="name">decreaseColorMin:</string>
-								<string key="candidateClassName">id</string>
-							</object>
-							<object class="IBActionInfo">
-								<string key="name">increaseColorMax:</string>
-								<string key="candidateClassName">id</string>
-							</object>
-							<object class="IBActionInfo">
-								<string key="name">increaseColorMin:</string>
-								<string key="candidateClassName">id</string>
-							</object>
-							<object class="IBActionInfo">
-								<string key="name">selectTool:</string>
-								<string key="candidateClassName">id</string>
-							</object>
-						</object>
-					</object>
-					<object class="NSMutableDictionary" key="outlets">
-						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSArray" key="dict.sortedKeys">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>ColorMaxLabel</string>
-							<string>ColorMinLabel</string>
-							<string>MinMaxIncLabel</string>
-							<string>MinMaxIncrementVal</string>
-							<string>toolSelected</string>
-						</object>
-						<object class="NSMutableArray" key="dict.values">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>NSTextField</string>
-							<string>NSTextField</string>
-							<string>NSTextField</string>
-							<string>NSSlider</string>
-							<string>NSMatrix</string>
-						</object>
-					</object>
-					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSArray" key="dict.sortedKeys">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>ColorMaxLabel</string>
-							<string>ColorMinLabel</string>
-							<string>MinMaxIncLabel</string>
-							<string>MinMaxIncrementVal</string>
-							<string>toolSelected</string>
-						</object>
-						<object class="NSMutableArray" key="dict.values">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<object class="IBToOneOutletInfo">
-								<string key="name">ColorMaxLabel</string>
-								<string key="candidateClassName">NSTextField</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">ColorMinLabel</string>
-								<string key="candidateClassName">NSTextField</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">MinMaxIncLabel</string>
-								<string key="candidateClassName">NSTextField</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">MinMaxIncrementVal</string>
-								<string key="candidateClassName">NSSlider</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">toolSelected</string>
-								<string key="candidateClassName">NSMatrix</string>
-							</object>
-						</object>
-					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/StatusController.h</string>
-					</object>
-				</object>
-			</object>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDevelopmentDependencies">
